--- a/CSS/style.css
+++ b/CSS/style.css
@@ -79,7 +79,7 @@ footer{
 .socsety img{
   height: 35px;
 }
-footer img {
+footer .socsety img {
   width: 10%;
 }
 .scetcik{background-color: #fff;}
