--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,6 +13,14 @@ body{
   color: #0A004F;
   font-family: 'Alegreya Sans', sans-serif;
   font-size: 20px;
+  transform: translateX(-100%);
+  transition: transform 0.4s;
+}
+body.on {
+  transform: translateX(0);
+}
+body.off {
+  transform: translateX(100%);
 }
 /*шапка*/
 header{
