--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,7 @@ body{
   font-family: 'Alegreya Sans', sans-serif;
   font-size: 20px;
   transform: translateX(-100%);
-  transition: transform 0.4s;
+  transform: translate(0.4s);
 }
 body.on {
   transform: translateX(0);
