--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,11 +14,14 @@ body{
   font-family: 'Alegreya Sans', sans-serif;
   font-size: 20px;
   transform: translateX(-100%);
-  transition:  0.4s;
+  transition: transform 0.4s;
+  background: #FFF;
 }
+
 body.on {
   transform: translateX(0);
 }
+
 body.off {
   transform: translateX(100%);
 }
