--- a/CSS/style.css
+++ b/CSS/style.css
@@ -93,7 +93,9 @@ footer{
 footer .socsety img {
   width: 10%;
 }
-.scetcik{background-color: #fff;}
+/*страница Кураторы*/
+
+
 /*@media  (min-width:5000px){
   footer{min-height: 465px;}
 }  */
