--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,7 +9,7 @@
 }
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap');
 body{
-  background-color: #FFFFF0;
+  background: #FFFFF0;
   color: #0A004F;
   font-family: 'Alegreya Sans', sans-serif;
   font-size: 20px;
