--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,11 +16,9 @@ body{
   transition: transform 0.4s;
   background: #FFFFF0;
 }
-
 body.on {
   transform: translateX(0);
 }
-
 body.off {
   transform: translateX(100%);
 }
@@ -65,7 +63,6 @@ nav li{
   margin-top: 50px;}
 .block_stih hr{width: 150px;margin:auto;margin-top: 20px; }
 .block_stih h1{font-size: 70px;text-align: center;}
-.block_stih h1 a{text-decoration: none;color: #0A004F;}
 .stih{display: flex; margin-top: 50px;justify-content: space-evenly;align-items: center;}
 .stih p{font-size: 25px;}
 .stih img{width: 50%;}
@@ -93,8 +90,51 @@ footer .socsety img {
   width: 10%;
 }
 /*страница Кураторы*/
+.block_cur{
+  width: 90%;
+    margin: auto;
+    margin-top: 70px;
+}
+.block_cur h1 {
+  font-size: 70px;
+  text-align: center;
+}
+.teacher{
+  display: flex;
+  justify-content: space-evenly;
+  margin: 70px auto;
 
-
+}
+.teach_img{
+  width: 30%;
+  height: auto;
+  position: relative;
+    cursor: pointer;
+}   
+.teach_img img{
+  width: 100%;
+  height: 100%;
+  border-radius: 2%;
+}
+.teach_img .teach_info{
+  opacity: 0;
+  position: absolute;
+  bottom: 0;
+  border-radius: 2%;
+  width: 100%;
+  height: 100%;
+    background-color: rgba(10, 0, 79, .6);
+    color: #FFFFF0;
+    padding: 50px;
+   
+}
+.teach_info h3{color: #fcffa6;}
+.teach_info p{
+  padding: 50px 0;
+  text-align: justify;
+}
+.teach_img:hover .teach_info{opacity: 1;
+  transition: 0.55s opacity;}
 /*@media  (min-width:5000px){
   footer{min-height: 465px;}
 }  */
