--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,9 @@
   box-sizing: border-box;
 }
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap');
+html{height: 100%;}
 body{
+  min-height: 100%;
   color: #0A004F;
   font-family: 'Alegreya Sans', sans-serif;
   font-size: 20px;
@@ -16,6 +18,7 @@ body{
   transition: transform 0.4s;
   background: #FFFFF0;
 }
+main{min-height: calc(97vh - 138px - 138px);}
 body.on {
   transform: translateX(0);
 }
@@ -24,6 +27,7 @@ body.off {
 }
 /*шапка*/
 header{
+  min-height: 138px;
   display: flex;
   justify-content: space-around ;
   padding: 5px 0;
@@ -78,7 +82,8 @@ footer{
   background-color: #0A004F;
   min-height:128px;
   margin:  auto;
-  height: auto;
+  /*min-height: 286px;*/
+  max-height: 138px;
 }
 
 .copy_infa{margin: auto 0;}
