--- a/CSS/style.css
+++ b/CSS/style.css
@@ -96,6 +96,7 @@ footer .socsety img {
 }
 /*страница Кураторы*/
 .block_cur{
+  display: flex;
   width: 90%;
     margin: auto;
     margin-top: 70px;
