--- a/CSS/style.css
+++ b/CSS/style.css
@@ -65,7 +65,6 @@ nav li{
   display: flex;
   flex-direction: column;
   margin-top: 50px;}
-.block_stih hr{width: 150px;margin:auto;margin-top: 20px; }
 .block_stih h1{font-size: 70px;text-align: center;}
 .stih{display: flex; margin-top: 50px;justify-content: space-evenly;align-items: center;}
 .stih p{font-size: 25px;}
@@ -82,7 +81,6 @@ footer{
   background-color: #0A004F;
   min-height:128px;
   margin:  auto;
-  /*min-height: 286px;*/
   max-height: 138px;
 }
 
@@ -111,35 +109,22 @@ footer .socsety img {
   margin: 70px 0;
 }
 .teach_img{
-  width: 26%;
+  width: auto;
+  min-width: 26%;
   height: auto;
   position: relative;
-    cursor: pointer;
+  cursor: pointer;
 }   
-.teach_img img{
-  width: 100%;
-  height: 100%;
-  border-radius: 2%;
+.teach_img img{width:100%;height:100%;border-radius:2%;}
+.teach_img .teach_info{opacity:0;position:absolute;bottom:0;border-radius:2%;width:100%;height:100%;background-color:rgba(10, 0, 79, .6);color:#FFFFF0;padding:50px 35px;}
+.teach_info h3{color:#fcffa6;}
+.teach_info p{padding-top:30px;}
+.teach_img:hover .teach_info{opacity:1;transition:0.55s opacity;}
+/*адаптив*/
+@media screen and (max-width:1400px){
+  main{min-height: calc(100vh - 138px - 138px);}
+  footer{min-height:138px;}
+.teach_info h3{font-size: 16px;}
+.teach_info p{font-size: 14px;}
+.block_cur h1, .block_stih h1{font-size: 50px;}
 }
-.teach_img .teach_info{
-  opacity: 0;
-  position: absolute;
-  bottom: 0;
-  border-radius: 2%;
-  width: 100%;
-  height: 100%;
-    background-color: rgba(10, 0, 79, .6);
-    color: #FFFFF0;
-    padding: 50px 35px;
-   
-}
-.teach_info h3{color: #fcffa6;}
-.teach_info p{
-  padding-top: 30px;
-  width: 100%;
-}
-.teach_img:hover .teach_info{opacity: 1;
-  transition: 0.55s opacity;}
-/*@media  (min-width:5000px){
-  footer{min-height: 465px;}
-}  */
