--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,120 +1,38 @@
 /*общее*/
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
+*,*::before,*::after{margin:0;padding:0;-webkit-box-sizing:border-box;box-sizing:border-box;}
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap');
-html{height: 100%;}
-body{
-  min-height: 100%;
-  color: #0A004F;
-  font-family: 'Alegreya Sans', sans-serif;
-  font-size: 20px;
-  transform: translateX(-100%);
-  transition: transform 0.4s;
-  background: #FFFFF0;
-}
-main{min-height: calc(97vh - 138px - 138px);}
-body.on {
-  transform: translateX(0);
-}
-body.off {
-  transform: translateX(100%);
-}
+html{height:100%;}
+body{min-height:100%;color:#0A004F;font-family:'Alegreya Sans',sans-serif;font-size:20px;transform:translateX(-100%);transition:transform 0.4s;background:#FFFFF0;}
+main{min-height:calc(97vh - 138px - 138px);}
+body.on{transform:translateX(0);}
+body.off{transform:translateX(100%);}
 /*шапка*/
-header{
-  min-height: 138px;
-  display: flex;
-  justify-content: space-around ;
-  padding: 5px 0;
-  background-color: #0A004F;
-}
-header  img{
-  width: 10%;
-}
-nav{
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-}
-nav a{
-  text-decoration: none;
-  color: #fcffa6;
-  margin-left: 40px;
-}
-nav a:hover{
-  color: #ffff00;
-}
-nav a.selected{
-  color: #FFF;
-  text-decoration: underline #ffff00;
-  pointer-events: none;
-}
-nav li{
-  display: inline;
-  list-style-type: none;
-}
+header{min-height:138px;display:flex;justify-content:space-around;padding:5px 0;background-color:#0A004F;}
+header  img{width:10%;}
+nav{display:flex;flex-wrap:wrap;align-items:center;}
+nav a{text-decoration:none;color:#fcffa6;margin-left:40px;}
+nav a:hover{color:#ffff00;}
+nav a.selected{color:#FFF;text-decoration:underline #ffff00;pointer-events:none;}
+nav li{display:inline;list-style-type:none;}
 /*поздравляшка*/
-.block_stih{
-  width: 90%;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  margin-top: 50px;}
-.block_stih h1{font-size: 70px;text-align: center;}
-.stih{display: flex; margin-top: 50px;justify-content: space-evenly;align-items: center;}
-.stih p{font-size: 25px;}
-.stih img{width: 50%;}
-.istocnik{margin: 35px  auto;}
-.istocnik a{color: #0A004F;}
+.block_stih{width:90%;margin:auto;display:flex;flex-direction:column;margin-top:50px;}
+.block_stih h1{font-size:70px;text-align:center;}
+.stih{display:flex;margin-top:50px;justify-content:space-evenly;align-items:center;}
+.stih p{font-size:25px;}
+.stih img{width:50%;}
+.istocnik{margin:35px  auto;}
+.istocnik a{color:#0A004F;}
 /*подвал*/
-footer{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 5px 0;
-  color: #fcffa6;
-  background-color: #0A004F;
-  min-height:128px;
-  margin:  auto;
-  max-height: 138px;
-}
-
-.copy_infa{margin: auto 0;}
-.socsety{margin-top: 15px;}
-.socsety img{
-  height: 35px;
-}
-footer .socsety img {
-  width: 10%;
-}
+footer{display:flex;justify-content:space-around;align-items:center;padding: 5px 0;color:#fcffa6;background-color:#0A004F;min-height:128px;margin:auto;max-height:138px;}
+.copy_infa{margin:auto 0;}
+.socsety{margin-top:15px;}
+.socsety img{height:35px;}
+footer .socsety img{width:10%;}
 /*страница Кураторы*/
-.block_cur{
-  width: 100%;
-    margin-top: 70px;
-}
-.block_cur h1 {
-  font-size: 70px;
-  text-align: center;
-}
-.teacher{
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 10px;
-  margin: 70px 0;
-}
-.teach_img{
-  width: auto;
-  min-width: 26%;
-  height: auto;
-  position: relative;
-  cursor: pointer;
-}   
+.block_cur{width:100%;margin-top:70px;}
+.block_cur h1{font-size:70px;text-align:center;}
+.teacher{display:flex;justify-content:center;flex-wrap:wrap;gap:10px;margin:70px 0;}
+.teach_img{width:auto;min-width:26%;height:auto;position:relative;cursor:pointer;}
 .teach_img img{width:100%;height:100%;border-radius:2%;}
 .teach_img .teach_info{opacity:0;position:absolute;bottom:0;border-radius:2%;width:100%;height:100%;background-color:rgba(10, 0, 79, .6);color:#FFFFF0;padding:50px 35px;}
 .teach_info h3{color:#fcffa6;}
@@ -124,13 +42,28 @@ footer .socsety img {
 @media screen and (max-width:1400px){
   main{min-height: calc(100vh - 138px - 138px);}
   footer{min-height:138px;}
-.teach_info h3{font-size: 16px;}
-.teach_info p{font-size: 14px;}
-.block_cur h1, .block_stih h1{font-size: 50px;}
-}
+.teach_info h3{font-size:16px;}
+.teach_info p{font-size:14px;}
+.block_cur h1, .block_stih h1{font-size:50px;}}
 @media screen and (max-width:768px){
-.stih{flex-direction: column-reverse;margin: 20px;}
-.stih img{width: 70%;margin-top: 15px;}
-.stih_text{text-align: center;}
-.teach_img:focus .teach_info{opacity:1;transition:0.55s opacity;}
-}
+.stih{flex-direction:column-reverse;margin:20px;}
+.stih img{width:70%;margin-top:15px;}
+.stih_text{text-align:center;}
+.teach_img:focus .teach_info{opacity:1;transition:0.55s opacity;}}
+@media screen and (max-width:320px){
+header{flex-direction: column;}
+header  img{width: 40%;margin: auto;}
+nav{justify-content: center;}
+nav a{margin:0;}
+nav li{display:block;text-align:center;margin:10px;}
+.block_stih h1, .block_cur h1{font-size: 35px;}
+.stih{flex-direction:column-reverse;margin:20px;}
+.stih img{width:100%;margin-top:15px;}
+.stih_text{text-align:center;}
+.stih p{font-size:14px;}
+.istocnik{font-size: 12px;}
+footer{min-height: 196px;flex-direction:column;}
+.copy_infa{text-align: center;}
+.teach_img .teach_info{padding: 25px 15px;}
+.teach_info p{padding-top:15px;}
+.teach_img:focus .teach_info{opacity:1;transition:0.55s opacity;}}
