--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,6 +14,7 @@ nav a{text-decoration:none;color:#fcffa6;margin-left:40px;}
 nav a:hover{color:#ffff00;}
 nav a.selected{color:#FFF;text-decoration:underline #ffff00;pointer-events:none;}
 nav li{display:inline;list-style-type:none;}
+#specialButton{margin-left:20px;cursor:pointer;}
 /*поздравляшка*/
 .block_stih{width:90%;margin:auto;display:flex;flex-direction:column;margin-top:50px;}
 .block_stih h1{font-size:70px;text-align:center;}
@@ -50,7 +51,7 @@ footer .socsety img{width:10%;}
 .stih img{width:70%;margin-top:15px;}
 .stih_text{text-align:center;}
 .teach_img:focus .teach_info{opacity:1;transition:0.55s opacity;}}
-@media screen and (max-width:320px){
+@media screen and (min-width:320px) and (max-width:480px){
 header{flex-direction: column;}
 header  img{width: 40%;margin: auto;}
 nav{justify-content: center;}
