--- a/CSS/style.css
+++ b/CSS/style.css
@@ -46,7 +46,7 @@ footer .socsety img{width:10%;}
 .teach_info h3{font-size:16px;}
 .teach_info p{font-size:14px;}
 .block_cur h1, .block_stih h1{font-size:50px;}}
-@media screen and (max-width:768px){
+@media screen and (min-width:768px) and (max-width:820px){
 .stih{flex-direction:column-reverse;margin:20px;}
 .stih img{width:70%;margin-top:15px;}
 .stih_text{text-align:center;}
